# ffasp

./: .gitignore  ASPEval.cpp  ASPEval.h  ASPResultParser.h  ASPSolver.h  ASPTranslate.cpp  ASPTranslate.h  Atom.cpp  Atom.h  AtomFactory.cpp  AtomFactory.h  AtomNode.cpp  AtomNode.h  AtomSet.cpp  AtomSet.h  BoostComponentFinder.cpp  BoostComponentFinder.h  CLSolver.cpp  CLSolver.h  CMakeLists.txt  CMakeLists.txt~  Component.cpp  Component.h  ComponentFinder.cpp  ComponentFinder.h  DLVASPSolver.cpp  DLVASPSolver.h  DLVResultParser.cpp  DLVResultParser.h  DLVResult_grammar.h  DependencyGraph.cpp  DependencyGraph.h  Error.cpp  Eval.h  EvalComp.cpp  EvalComp.h  FAnswerSet.cpp  FAnswerSet.h  GetPot.h  Globals.cpp  (+40 more)
experiment/: gen2n  gen2n.cpp  gen3n.cpp  genodd.c  genstrat.c  graph10  oddcycle.lp  strat10  strat93.lp  stratified.lp  stratified2.txt  test.lp  testcon.lp  testincon.lp
experiment/GraphColouring/: 01-graph_colouring-125-0.asp  02-graph_colouring-125-0.asp  03-graph_colouring-125-0.asp  04-graph_colouring-125-0.asp  05-graph_colouring-125-0.asp  06-graph_colouring-125-0.asp  07-graph_colouring-125-0.asp  08-graph_colouring-125-0.asp  09-graph_colouring-125-0.asp  10-graph_colouring-125-0.asp  11-graph_colouring-130-0.asp  12-graph_colouring-130-0.asp  13-graph_colouring-130-0.asp  14-graph_colouring-130-0.asp  15-graph_colouring-130-0.asp  16-graph_colouring-130-0.asp  17-graph_colouring-130-0.asp  18-graph_colouring-130-0.asp  19-graph_colouring-130-0.asp  20-graph_colouring-130-0.asp  21-graph_colouring-135-0.asp  22-graph_colouring-135-0.asp  23-graph_colouring-135-0.asp  24-graph_colouring-135-0.asp  25-graph_colouring-135-0.asp  26-graph_colouring-135-0.asp  27-graph_colouring-135-0.asp  28-graph_colouring-135-0.asp  29-graph_colouring-135-0.asp  30-graph_colouring-135-0.asp  31-graph_colouring-140-0.asp  32-graph_colouring-140-0.asp  33-graph_colouring-140-0.asp  34-graph_colouring-140-0.asp  35-graph_colouring-140-0.asp  (+28 more)
release/: CMakeCache.txt  Makefile  cmake_install.cmake
wiki/: PageName.wiki
(+446 files in other folders)
