cmake_minimum_required(VERSION 3.7)
project(ffasp)

set(CMAKE_BUILD_TYPE RELEASE)
#set(CMAKE_BUILD_TYPE DEBUG)
add_executable(ffasp Term.cpp SpiritProgramParser.cpp SafetyChecker.cpp Rule.cpp Rewrite.cpp Program.cpp ProcessBuff.cpp Literal.cpp Globals.cpp FAnswerSet.cpp Error.cpp CLSolver.cpp AtomSet.cpp Atom.cpp ASPTranslate.cpp ASPEval.cpp AtomNode.cpp AtomFactory.cpp Component.cpp GraphBuilder.cpp Registry.cpp ComponentFinder.cpp BoostComponentFinder.cpp DependencyGraph.cpp EvalComp.cpp GraphProcessor.cpp MIPMinCheck.cpp main.cpp)
find_library(glpk glpk)
find_library(Cbc Cbc)
find_library(CbcSolver CbcSolver)
find_library(Cgl Cgl)
find_library(Clp Clp)
find_library(CoinUtils CoinUtils)
find_library(OsiCbc OsiCbc)
find_library(OsiClp OsiClp)
target_link_libraries(ffasp glpk)
target_link_libraries(ffasp CoinUtils)
target_link_libraries(ffasp Clp)
target_link_libraries(ffasp Cbc)
target_link_libraries(ffasp OsiCbc)
target_link_libraries(ffasp OsiClp)

install(TARGETS ffasp RUNTIME DESTINATION bin)
